feat: track heap delta
Adds a new measurement to track changes in the heap usage within a
benchmark.

--- a/tests/measurements_output/canbench_results.yml
+++ b/tests/measurements_output/canbench_results.yml
@@ -4,29 +4,34 @@
 # A benchmark that is expected to return no changes.
 no_changes_test:
   measurements:
-    instructions: 304
+    heap_delta: 0
+    instructions: 310
     stable_memory_delta: 0
 
 # A benchmark that is expected to return a noisy change.
 noisy_change_test:
   measurements:
+    heap_delta: 0
     instructions: 306
     stable_memory_delta: 0
 
 # A benchmark that is expected to return a regression.
 regression_test:
   measurements:
+    heap_delta: 0
     instructions: 10
     stable_memory_delta: 0
 
 # A benchmark that is expected to return an improvement.
 improvement_test:
   measurements:
-    instructions: 3040
+    heap_delta: 0
+    instructions: 3100
     stable_memory_delta: 0
 
 # A benchmark that is expected to return a regression from zero.
 stable_memory_increase:
   measurements:
+    heap_delta: 0
     instructions: 0
     stable_memory_delta: 0
