--- a/examples/fibonacci/canbench.yml
+++ b/examples/fibonacci/canbench.yml
@@ -1,5 +1,5 @@
 build_cmd:
-  cargo build --release --target wasm32-unknown-unknown
+  cargo build --release --target wasm32-unknown-unknown --features canbench
 
 wasm_path:
   ../../target/wasm32-unknown-unknown/release/fibonacci.wasm
