--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,5 +11,5 @@ jobs:
       uses: thollander/actions-comment-pull-request@v2
       with:
         message: |
-          '👋 Thanks for reporting again!'
+          '👋 Thanks for reporting again and again!'
         comment_tag: canbench
