--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,5 +12,5 @@ jobs:
         uses: thollander/actions-comment-pull-request@v2
         with:
           message: |
-            '👋 Thanks for reporting again and again!'
+            '👋 Thanks for reporting again and again and again!! just updated'
           comment_tag: canbench
