--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,7 @@ jobs:
       - name: Benchmark
         id: run-canbench
         run: |
+          cargo install --path ./canbench-bin
           cd examples/fibonacci
           canbench
 
