--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,11 +28,12 @@ jobs:
         run: |
           cargo install --path ./canbench-bin
           cd examples/fibonacci
-          canbench > output.txt
+          export FOO=$(canbench)
+          echo "::set-env name=FOO::$FOO"
 
       - name: Post comment
         uses: thollander/actions-comment-pull-request@v2
         with:
           message: |
-            $(cat output.txt)
+            ${{ FOO }}
           comment_tag: canbench
