--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,12 +28,10 @@ jobs:
         run: |
           cargo install --path ./canbench-bin
           cd examples/fibonacci
-          export FOO=$(canbench)
-          echo "::set-env name=FOO::$FOO"
+          canbench > output.txt
 
       - name: Post comment
         uses: thollander/actions-comment-pull-request@v2
         with:
-          message: |
-            hi ${{ FOO }}
+          filePath: output.txt
           comment_tag: canbench
