--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
           cd examples/fibonacci
           echo "```" > /tmp/output.txt
           canbench --less-verbose >> /tmp/output.txt
-          echo "```" > /tmp/output.txt
+          echo "```" >> /tmp/output.txt
 
       - name: Post comment
         uses: thollander/actions-comment-pull-request@v2
