--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,29 +26,7 @@ jobs:
       - name: Benchmark
         id: run-canbench
         run: |
-          set -Eexuo pipefail
-
-          canbench_output=/tmp/canbench_output.txt
-
-          cargo install --path ./canbench-bin
-          cd examples/fibonacci
-
-          canbench --less-verbose >> $canbench_output
-          if grep -q "(regressed by \|(improved by" "${canbench_output}"; then
-            echo "Significant performance change detected! ⚠️
-            If the change is expected, run \`canbench --persist\` to save the updated benchmark results." > $canbench_output
-          else
-            echo "No significant performance changes detected ✅" > $canbench_output
-          fi
-
-          ## Add the output of canbench to the file.
-          echo "" >> $canbench_output
-          echo "\`\`\`" >> $canbench_output
-          canbench --less-verbose >> $canbench_output
-          echo "\`\`\`" >> $canbench_output
-
-          # Output the file's contents to stdout.
-          cat $canbench_output
+          ./scripts/ci_run_benchmark.sh examples/fibonacci
 
       - name: Post comment
         uses: thollander/actions-comment-pull-request@v2
