--- a/examples/btreemap_vs_hashmap/canbench_results.yml
+++ b/examples/btreemap_vs_hashmap/canbench_results.yml
@@ -1,17 +1,17 @@
 insert_users:
   total:
-    instructions: 2564620912
+    instructions: 2564620808
     heap_delta: 871
     stable_memory_delta: 0
-  profiling: {}
+  scopes: {}
 pre_upgrade_bench:
   total:
-    instructions: 717106404
+    instructions: 717106465
     heap_delta: 519
     stable_memory_delta: 184
-  profiling:
+  scopes:
     serialize_state:
-      instructions: 717103810
+      instructions: 717103975
       heap_delta: 519
       stable_memory_delta: 0
     writing_to_stable_memory:
@@ -20,7 +20,7 @@ pre_upgrade_bench:
       stable_memory_delta: 184
 remove_users:
   total:
-    instructions: 2057543383
+    instructions: 2057543279
     heap_delta: 0
     stable_memory_delta: 0
-  profiling: {}
+  scopes: {}
