--- a/tests/measurements_output/canbench_results.yml
+++ b/tests/measurements_output/canbench_results.yml
@@ -5,14 +5,14 @@
 no_changes_test:
   total:
     heap_delta: 0
-    instructions: 310
+    instructions: 206
     stable_memory_delta: 0
 
 # A benchmark that is expected to return a noisy change.
 noisy_change_test:
   total:
     heap_delta: 0
-    instructions: 305
+    instructions: 210
     stable_memory_delta: 0
 
 # A benchmark that is expected to return a regression.
@@ -36,14 +36,14 @@ stable_memory_increase:
     instructions: 0
     stable_memory_delta: 0
 
-# A benchmark that is expected to return a delta of new profiling steps.
-profiling_exists:
+# A benchmark that is expected to return a delta of new scopes steps.
+bench_scope_exists:
   total:
     heap_delta: 0
     instructions: 0
     stable_memory_delta: 0
 
-  profiling:
-    step_1:
+  scopes:
+    scope_1:
       heap_delta: 12
       instructions: 800
