--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
         run: cargo clippy --tests --benches -- -D clippy::all
 
       - name: Test
-        run: cargo test -- --test-threads=1
+        run: cargo test --all-features -- --test-threads=1
         env:
           RUST_BACKTRACE: 1
 
