--- a/examples/fibonacci/canbench_results.yml
+++ b/examples/fibonacci/canbench_results.yml
@@ -1,12 +1,12 @@
 fibonacci_20:
   total:
-    instructions: 2301
+    instructions: 2197
     heap_delta: 0
     stable_memory_delta: 0
-  profiling: {}
+  scopes: {}
 fibonacci_45:
   total:
-    instructions: 3088
+    instructions: 2984
     heap_delta: 0
     stable_memory_delta: 0
-  profiling: {}
+  scopes: {}
