--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -81,6 +81,12 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build]
     steps:
+      - name: Checkout Main branch
+        uses: actions/checkout@v4
+        ref: main
+        with:
+          path: main_branch
+
       - uses: actions/checkout@v3
       - uses: actions/cache@v3
         with:
