--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -79,7 +79,7 @@ jobs:
 
   benchmark-btreemap-vs-hashmap-example:
     runs-on: ubuntu-latest
-    needs: [build]
+      #needs: [build]
     steps:
       - name: Checkout Main branch
         uses: actions/checkout@v4
@@ -87,14 +87,8 @@ jobs:
           ref: main
           path: main_branch
 
-      - uses: actions/checkout@v3
-      - uses: actions/cache@v3
-        with:
-          path: |
-            ~/.cargo/registry
-            ~/.cargo/git
-            target
-          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}-1
+      - name: Checkout current PR
+        uses: actions/checkout@v4
 
       - name: Install Rust
         run: |
