--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,6 +80,8 @@ jobs:
   benchmark-btreemap-vs-hashmap-example:
     runs-on: ubuntu-latest
       #needs: [build]
+    env:
+      PROJECT_DIR: examples/btreemap_vs_hashmap
     steps:
       - name: Checkout current PR
         uses: actions/checkout@v4
@@ -106,7 +108,14 @@ jobs:
 
       - name: Benchmark
         run: |
-          bash ./scripts/ci_run_benchmark.sh examples/btreemap_vs_hashmap
+          bash ./scripts/ci_run_benchmark.sh $PROJECT_DIR
+
+      - name: Update canbench results file (if needed)
+        uses: test-room-7/action-update-file@v1
+        with:
+          file-path: $PROJECT_DIR/canbench_results.yml
+          commit-msg: Update canbench_results.yml
+          github-token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Post comment
         uses: thollander/actions-comment-pull-request@v2
