--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,9 +46,19 @@ jobs:
 
   benchmark-fibonacci-example:
     runs-on: ubuntu-latest
-    needs: [build]
+      #needs: [build]
+    env:
+      PROJECT_DIR: examples/fibonacci
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout current PR
+        uses: actions/checkout@v4
+
+      - name: Checkout main branch
+        uses: actions/checkout@v4
+        with:
+          ref: main
+          path: _canbench_main_branch
+
       - uses: actions/cache@v3
         with:
           path: |
@@ -65,13 +75,13 @@ jobs:
 
       - name: Benchmark
         run: |
-          bash ./scripts/ci_run_benchmark.sh examples/fibonacci
+          bash ./scripts/ci_run_benchmark.sh $PROJECT_DIR
 
       - name: Post comment
         uses: thollander/actions-comment-pull-request@v2
         with:
           filePath: /tmp/canbench_comment_message.txt
-          comment_tag: canbench_fibonacci
+          comment_tag: ${{ env.PROJECT_DIR }}
 
       - name: Pass or fail
         run: |
