--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,7 @@ jobs:
 
   benchmark-fibonacci-example:
     runs-on: ubuntu-latest
-      #needs: [build]
+    needs: [build]
     env:
       PROJECT_DIR: examples/fibonacci
     steps:
@@ -69,8 +69,8 @@ jobs:
 
       - name: Install Rust
         run: |
-          rustup update ${{ matrix.rust }} --no-self-update
-          rustup default ${{ matrix.rust }}
+          rustup update $RUST_VERSION --no-self-update
+          rustup default $RUST_VERSION
           rustup target add wasm32-unknown-unknown
 
       - name: Benchmark
@@ -89,7 +89,7 @@ jobs:
 
   benchmark-btreemap-vs-hashmap-example:
     runs-on: ubuntu-latest
-      #needs: [build]
+    needs: [build]
     env:
       PROJECT_DIR: examples/btreemap_vs_hashmap
     steps:
@@ -112,8 +112,8 @@ jobs:
 
       - name: Install Rust
         run: |
-          rustup update ${{ matrix.rust }} --no-self-update
-          rustup default ${{ matrix.rust }}
+          rustup update $RUST_VERSION --no-self-update
+          rustup default $RUST_VERSION
           rustup target add wasm32-unknown-unknown
 
       - name: Benchmark
