--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,8 +47,18 @@ jobs:
   benchmark-fibonacci-example:
     runs-on: ubuntu-latest
     needs: [build]
+    env:
+      PROJECT_DIR: examples/fibonacci
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout current PR
+        uses: actions/checkout@v4
+
+      - name: Checkout main branch
+        uses: actions/checkout@v4
+        with:
+          ref: main
+          path: _canbench_main_branch
+
       - uses: actions/cache@v3
         with:
           path: |
@@ -59,19 +69,19 @@ jobs:
 
       - name: Install Rust
         run: |
-          rustup update ${{ matrix.rust }} --no-self-update
-          rustup default ${{ matrix.rust }}
+          rustup update $RUST_VERSION --no-self-update
+          rustup default $RUST_VERSION
           rustup target add wasm32-unknown-unknown
 
       - name: Benchmark
         run: |
-          bash ./scripts/ci_run_benchmark.sh examples/fibonacci
+          bash ./scripts/ci_run_benchmark.sh $PROJECT_DIR
 
       - name: Post comment
         uses: thollander/actions-comment-pull-request@v2
         with:
           filePath: /tmp/canbench_comment_message.txt
-          comment_tag: canbench_fibonacci
+          comment_tag: ${{ env.PROJECT_DIR }}
 
       - name: Pass or fail
         run: |
@@ -80,8 +90,18 @@ jobs:
   benchmark-btreemap-vs-hashmap-example:
     runs-on: ubuntu-latest
     needs: [build]
+    env:
+      PROJECT_DIR: examples/btreemap_vs_hashmap
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout current PR
+        uses: actions/checkout@v4
+
+      - name: Checkout main branch
+        uses: actions/checkout@v4
+        with:
+          ref: main
+          path: _canbench_main_branch
+
       - uses: actions/cache@v3
         with:
           path: |
@@ -92,19 +112,19 @@ jobs:
 
       - name: Install Rust
         run: |
-          rustup update ${{ matrix.rust }} --no-self-update
-          rustup default ${{ matrix.rust }}
+          rustup update $RUST_VERSION --no-self-update
+          rustup default $RUST_VERSION
           rustup target add wasm32-unknown-unknown
 
       - name: Benchmark
         run: |
-          bash ./scripts/ci_run_benchmark.sh examples/btreemap_vs_hashmap
+          bash ./scripts/ci_run_benchmark.sh $PROJECT_DIR
 
       - name: Post comment
         uses: thollander/actions-comment-pull-request@v2
         with:
           filePath: /tmp/canbench_comment_message.txt
-          comment_tag: canbench_btreemap_vs_hashmap
+          comment_tag: ${{ env.PROJECT_DIR }}
 
       - name: Pass or fail
         run: |
@@ -114,7 +134,7 @@ jobs:
     name: ShellCheck
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - name: Run ShellCheck
       uses: ludeeus/action-shellcheck@master
       env:
