--- a/examples/fibonacci/canbench_results.yml
+++ b/examples/fibonacci/canbench_results.yml
@@ -1,12 +1,14 @@
-fibonacci_20:
-  total:
-    instructions: 2197
-    heap_delta: 0
-    stable_memory_delta: 0
-  scopes: {}
-fibonacci_45:
-  total:
-    instructions: 2984
-    heap_delta: 0
-    stable_memory_delta: 0
-  scopes: {}
+benches:
+  fibonacci_20:
+    total:
+      instructions: 2197
+      heap_delta: 0
+      stable_memory_delta: 0
+    scopes: {}
+  fibonacci_45:
+    total:
+      instructions: 2984
+      heap_delta: 0
+      stable_memory_delta: 0
+    scopes: {}
+version: 0.2.0
