--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ ic-cdk-macros = "0.8.4"
 proc-macro2 = "1.0"
 quote = "1.0"
 reqwest = { version = "0.11.23", features = ["blocking"] }
+semver = "1.0.21"
 serde = "1.0"
 serde_yaml = "0.9"
 sha256 = "1.5.0"
