--- a/canbench-bin/Cargo.toml
+++ b/canbench-bin/Cargo.toml
@@ -15,6 +15,8 @@ colored.workspace = true
 flate2.workspace = true
 hex.workspace = true
 reqwest.workspace = true
+semver.workspace = true
+serde.workspace = true
 serde_yaml.workspace = true
 sha256.workspace = true
 tempfile.workspace = true
