chore: update to metric names
Renames "heap_delta" to "heap_increase"
Renames "stable_memory_delta" to "stable_memory_increase"

--- a/tests/measurements_output/canbench_results.yml
+++ b/tests/measurements_output/canbench_results.yml
@@ -4,47 +4,47 @@ benches:
   # A benchmark that is expected to return no changes.
   no_changes_test:
     total:
-      heap_delta: 0
+      heap_increase: 0
       instructions: 207
-      stable_memory_delta: 0
+      stable_memory_increase: 0
 
   # A benchmark that is expected to return a noisy change.
   noisy_change_test:
     total:
-      heap_delta: 0
+      heap_increase: 0
       instructions: 210
-      stable_memory_delta: 0
+      stable_memory_increase: 0
 
   # A benchmark that is expected to return a regression.
   regression_test:
     total:
-      heap_delta: 0
+      heap_increase: 0
       instructions: 10
-      stable_memory_delta: 0
+      stable_memory_increase: 0
 
   # A benchmark that is expected to return an improvement.
   improvement_test:
     total:
-      heap_delta: 0
+      heap_increase: 0
       instructions: 3100
-      stable_memory_delta: 0
+      stable_memory_increase: 0
 
   # A benchmark that is expected to return a regression from zero.
-  stable_memory_increase:
+  stable_memory_increase_from_zero:
     total:
-      heap_delta: 0
+      heap_increase: 0
       instructions: 0
-      stable_memory_delta: 0
+      stable_memory_increase: 0
 
-  # A benchmark that is expected to return a delta of new scopes steps.
+  # A benchmark that is expected to return an increase of new scopes steps.
   bench_scope_exists:
     total:
-      heap_delta: 0
+      heap_increase: 0
       instructions: 0
-      stable_memory_delta: 0
+      stable_memory_increase: 0
 
     scopes:
       scope_1:
-        heap_delta: 12
+        heap_increase: 12
         instructions: 800
 version: 0.1.0
