--- a/examples/btreemap_vs_hashmap/canbench_results.yml
+++ b/examples/btreemap_vs_hashmap/canbench_results.yml
@@ -2,27 +2,27 @@ benches:
   insert_users:
     total:
       instructions: 2570835903
-      heap_delta: 871
-      stable_memory_delta: 0
+      heap_increase: 871
+      stable_memory_increase: 0
     scopes: {}
   pre_upgrade_bench:
     total:
       instructions: 729107688
-      heap_delta: 519
-      stable_memory_delta: 184
+      heap_increase: 519
+      stable_memory_increase: 184
     scopes:
       serialize_state:
         instructions: 729105169
-        heap_delta: 519
-        stable_memory_delta: 0
+        heap_increase: 519
+        stable_memory_increase: 0
       writing_to_stable_memory:
         instructions: 506
-        heap_delta: 0
-        stable_memory_delta: 184
+        heap_increase: 0
+        stable_memory_increase: 184
   remove_users:
     total:
       instructions: 2072135114
-      heap_delta: 0
-      stable_memory_delta: 0
+      heap_increase: 0
+      stable_memory_increase: 0
     scopes: {}
 version: 0.1.0
