--- a/examples/fibonacci/canbench_results.yml
+++ b/examples/fibonacci/canbench_results.yml
@@ -2,13 +2,13 @@ benches:
   fibonacci_20:
     total:
       instructions: 2224
-      heap_delta: 0
-      stable_memory_delta: 0
+      heap_increase: 0
+      stable_memory_increase: 0
     scopes: {}
   fibonacci_45:
     total:
       instructions: 3011
-      heap_delta: 0
-      stable_memory_delta: 0
+      heap_increase: 0
+      stable_memory_increase: 0
     scopes: {}
 version: 0.1.0
