chore: rename `canbench` rust library to `canbench-rs`.
Due to naming conflicts on crates.io, we cannot publish both the canbench
Rust library and the canbench binary with the same name.

We therefore rename the Rust library to canbench-rs.

--- a/canbench-bin/Cargo.toml
+++ b/canbench-bin/Cargo.toml
@@ -9,7 +9,7 @@ name = "canbench"
 path = "src/main.rs"
 
 [dependencies]
-canbench = { path = "../canbench-rs" }
+canbench-rs = { path = "../canbench-rs" }
 candid.workspace = true
 clap.workspace = true
 colored.workspace = true
