--- a/canbench-rs/Cargo.toml
+++ b/canbench-rs/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "canbench"
+name = "canbench-rs"
 version = "0.1.0"
 edition = "2021"
 license = "Apache-2.0"
@@ -7,11 +7,10 @@ license = "Apache-2.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [lib]
-name = "canbench"
 path = "src/lib.rs"
 
 [dependencies]
-canbench-macros = { path = "../canbench-rs-macros" }
+canbench-rs-macros = { path = "../canbench-rs-macros" }
 candid.workspace = true
 ic-cdk.workspace= true
 serde.workspace = true
