--- a/examples/btreemap_vs_hashmap/canbench.yml
+++ b/examples/btreemap_vs_hashmap/canbench.yml
@@ -1,5 +1,5 @@
 build_cmd:
-  cargo build --release --target wasm32-unknown-unknown --features canbench
+  cargo build --release --target wasm32-unknown-unknown --features canbench-rs
 
 wasm_path:
   ../../target/wasm32-unknown-unknown/release/btreemap_vs_hashmap.wasm
