--- a/canbench-rs-macros/Cargo.toml
+++ b/canbench-rs-macros/Cargo.toml
@@ -2,6 +2,9 @@
 name = "canbench-rs-macros"
 version = "0.1.0"
 edition = "2021"
+license = "Apache-2.0"
+description = "Macros for canbench-rs"
+repository = "https://github.com/dfinity/canbench"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
