--- a/canbench-rs/Cargo.toml
+++ b/canbench-rs/Cargo.toml
@@ -3,6 +3,9 @@ name = "canbench-rs"
 version = "0.1.0"
 edition = "2021"
 license = "Apache-2.0"
+description = "The rust library for `canbench`, the benchmarking framework for canisters on the Internet Computer."
+repository = "https://github.com/dfinity/canbench"
+tags = ["internet computer", "benchmark", "canister", "canisters", "ic", "perf", "optimize"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -10,7 +13,7 @@ license = "Apache-2.0"
 path = "src/lib.rs"
 
 [dependencies]
-canbench-rs-macros = { path = "../canbench-rs-macros" }
+canbench-rs-macros = "0.1.0"
 candid.workspace = true
 ic-cdk.workspace= true
 serde.workspace = true
