--- a/canbench-rs/Cargo.toml
+++ b/canbench-rs/Cargo.toml
@@ -3,6 +3,10 @@ name = "canbench-rs"
 version = "0.1.0"
 edition = "2021"
 license = "Apache-2.0"
+description = "The rust library for `canbench`, the benchmarking framework for canisters on the Internet Computer."
+repository = "https://github.com/dfinity/canbench"
+keywords = ["internet-computer", "benchmark", "canister", "ic", "perf"]
+readme = "../README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
