--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,6 +47,10 @@ jobs:
   benchmark-fibonacci-example:
     runs-on: ubuntu-latest
     needs: [build]
+    on: [pull_request_target] # To allow running from forked repositories.
+    permissions:
+        # See https://github.com/thollander/actions-comment-pull-request/issues/181
+        pull-requests: write
     env:
       PROJECT_DIR: examples/fibonacci
     steps:
@@ -90,6 +94,10 @@ jobs:
   benchmark-btreemap-vs-hashmap-example:
     runs-on: ubuntu-latest
     needs: [build]
+    on: [pull_request_target] # To allow running from forked repositories.
+    permissions:
+        # See https://github.com/thollander/actions-comment-pull-request/issues/181
+        pull-requests: write
     env:
       PROJECT_DIR: examples/btreemap_vs_hashmap
     steps:
