--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,5 @@
 name: CI
-on: [pull_request]
+on: [pull_request_target]
 
 env:
   RUST_VERSION: 1.75.0
@@ -47,7 +47,6 @@ jobs:
   benchmark-fibonacci-example:
     runs-on: ubuntu-latest
     needs: [build]
-    on: [pull_request_target] # To allow running from forked repositories.
     permissions:
         # See https://github.com/thollander/actions-comment-pull-request/issues/181
         pull-requests: write
