--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,5 @@
 name: CI
-on: [pull_request_target]
+on: [pull_request]
 
 env:
   RUST_VERSION: 1.75.0
@@ -47,9 +47,6 @@ jobs:
   benchmark-fibonacci-example:
     runs-on: ubuntu-latest
     needs: [build]
-    permissions:
-        # See https://github.com/thollander/actions-comment-pull-request/issues/181
-        pull-requests: write
     env:
       PROJECT_DIR: examples/fibonacci
     steps:
@@ -80,11 +77,11 @@ jobs:
         run: |
           bash ./scripts/ci_run_benchmark.sh $PROJECT_DIR
 
-      - name: Post comment
-        uses: thollander/actions-comment-pull-request@v2
+      - name: Upload results
+        uses: actions/upload-artifact@v4
         with:
-          filePath: /tmp/canbench_comment_message.txt
-          comment_tag: ${{ env.PROJECT_DIR }}
+          name: fibonacci
+          path: /tmp_canbench_comment_message.txt
 
       - name: Pass or fail
         run: |
@@ -93,10 +90,6 @@ jobs:
   benchmark-btreemap-vs-hashmap-example:
     runs-on: ubuntu-latest
     needs: [build]
-    on: [pull_request_target] # To allow running from forked repositories.
-    permissions:
-        # See https://github.com/thollander/actions-comment-pull-request/issues/181
-        pull-requests: write
     env:
       PROJECT_DIR: examples/btreemap_vs_hashmap
     steps:
