--- a/.github/workflows/comment-pr.yml
+++ b/.github/workflows/comment-pr.yml
@@ -11,8 +11,8 @@ on:
 jobs:
   upload:
     runs-on: ubuntu-latest
-    if: >
-      github.event.workflow_run.event == 'pull_request'
+      #    if: >
+      #github.event.workflow_run.event == 'pull_request'
     steps:
       - name: 'Download artifact'
         uses: actions/github-script@v3.1.0
