--- a/.github/workflows/comment-pr.yml
+++ b/.github/workflows/comment-pr.yml
@@ -4,7 +4,7 @@ name: Comment on PR
 # access to secrets
 on:
   workflow_run:
-    workflows: ["CI"]
+    workflows: ["ci"]
     types:
       - requested
 
