--- a/.github/workflows/comment-pr.yml
+++ b/.github/workflows/comment-pr.yml
@@ -4,7 +4,7 @@ name: Comment on PR
 # access to secrets
 on:
   workflow_run:
-    workflows: ["CI"]
+    workflows: [upload_file_test]
     types:
       - completed
 
@@ -14,16 +14,8 @@ jobs:
       #    if: >
       #github.event.workflow_run.event == 'pull_request'
     steps:
-      - name: 'Download artifact'
-        uses: actions/github-script@v3.1.0
-        with:
-          script: |
-            var artifacts = await github.actions.listWorkflowRunArtifacts({
-               owner: context.repo.owner,
-               repo: context.repo.repo,
-               run_id: ${{github.event.workflow_run.id }},
-            });
-            console.log(artifacts);
+      - name: 'hi'
+        run: echo "hello"
 
             #- name: Post comment
             #uses: thollander/actions-comment-pull-request@v2
