--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,16 +1,21 @@
-name: CI
-on: [pull_request]
+name: Upload data
 
-env:
-  RUST_VERSION: 1.75.0
+on:
+  pull_request:
 
 jobs:
-  upload_file_test:
+  upload:
     runs-on: ubuntu-latest
-    env:
-      PROJECT_DIR: examples/fibonacci
+
     steps:
-      - name: Test
+      - name: Save PR number
+        env:
+          PR_NUMBER: ${{ github.event.number }}
         run: |
-          mkdir -p $PROJECT_DIR
-          echo "my message" > $PROJECT_DIR/__canbench_comment_message.txt
+          mkdir -p ./pr
+          echo $PR_NUMBER > ./pr/pr_number
+      - uses: actions/upload-artifact@v4
+        with:
+          name: pr_number
+          path: pr/
+
